--- a/dev board/dev board.ioc
+++ b/dev board/dev board.ioc
@@ -8,6 +8,8 @@ ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
 File.Version=6
+I2C1.IPParameters=Timing
+I2C1.Timing=0x30A0A7FB
 KeepUserPlacement=false
 LPUART1.BaudRate=115200
 LPUART1.IPParameters=BaudRate,WordLength
@@ -15,22 +17,25 @@ LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.CPN=STM32G474RET6
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
-Mcu.IP1=LPUART1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM3
-Mcu.IPNb=6
+Mcu.IP1=I2C1
+Mcu.IP2=LPUART1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM3
+Mcu.IPNb=7
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA13
 Mcu.Pin11=PA14
-Mcu.Pin12=PB3
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_SYS_VS_DBSignals
-Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin12=PA15
+Mcu.Pin13=PB3
+Mcu.Pin14=PB9
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_SYS_VS_DBSignals
+Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
@@ -39,7 +44,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=16
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -71,6 +76,9 @@ PA14.GPIO_Label=T_SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Locked=true
+PA15.Mode=I2C
+PA15.Signal=I2C1_SCL
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=LPUART1_TX [STLINKV3E_VCP_RX]
 PA2.Locked=true
@@ -93,6 +101,9 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=T_SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB9.Locked=true
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=B1 [blue push button]
 PC13.Locked=true
